fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -758,6 +758,7 @@
   position: relative;
   background-position: center center;
   height: 100vh;
+  overflow: hidden;
 }
 .hero__title {
   font-size: 4.375rem;
@@ -1243,6 +1244,11 @@ html, body {
 
 body {
   font-family: "Raleway", sans-serif;
+}
+
+.section {
+  height: 100vh;
+  overflow: hidden;
 }
 
 .container {
